Fix image positioning
Amy To's photo is too short

--- a/src/components/BoardCard/styles.module.scss
+++ b/src/components/BoardCard/styles.module.scss
@@ -39,9 +39,11 @@
     grid-area: 2 / 1 / 3 / 2;
     overflow: hidden;
 
-    img {
+    .photo {
       object-fit: cover;
-      object-position: center -1rem;
+      object-position: center top;
+      // Using px not rem because it is hardcoded in the component
+      transform: translateY(-16px);
     }
     .default {
       object-fit: contain;
@@ -49,6 +51,7 @@
       top: 0;
       min-height: 100%;
       height: 100%;
+      width: 100%;
     }
   }
   .footer {
